--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = manuvazquez
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = fastcore numpy matplotlib torch seaborn>=0.12
 # dev_requirements = 
 # console_scripts =
