- 10_data.ipynb     - CollateFunction         - no need to pass `n_points_to_subsample` - generate_timeseries.py     - commented out matplotlib stuff

--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = manuvazquez
 
 ### Optional ###
-requirements = fastcore numpy matplotlib torch seaborn>=0.12
+requirements = fastcore numpy scipy matplotlib torch seaborn>=0.12
 # dev_requirements = 
 # console_scripts =
