--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -2,5 +2,6 @@ website:
   sidebar:
     contents:
       - index.ipynb
-      - 00_core.ipynb
       - 10_data.ipynb
+      - 20_plot.ipynb
+      - 30_train.ipynb
